k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: campus-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /api/users/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-service
            port:
              number: 8000
      - path: /api/registrations/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: registration-service
            port:
              number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /event/$1
spec:
  rules:
  - http:
      paths:
      - path: /api/events/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: event-service
            port:
              number: 8000
